--- a/static/css/index.css
+++ b/static/css/index.css
@@ -57,8 +57,12 @@ body {
 
 .publication-venue {
     color: #555;
-    width: fit-content;
+    /* width: fit-content; */
     font-weight: bold;
+}
+
+.publication-venue a:hover{
+  text-decoration: underline;
 }
 
 .publication-awards {
